Document PPDG/src/objects/PostCode__c.object
<CustomObject>
    <description>Poscode lookup for seller</description>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <label>PostCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PostCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PostCode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>PostCode__c</columns>
        <columns>User__c</columns>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Fawad_Awan</fullName>
        <columns>PostCode__c</columns>
        <columns>User__c</columns>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Fawad Awan</value>
        </filters>
        <label>Fawad Awan</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Junaid_Sarwar</fullName>
        <columns>PostCode__c</columns>
        <columns>User__c</columns>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Junaid Sarwar</value>
        </filters>
        <label>Junaid Sarwar</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Postcodes</fullName>
        <columns>NAME</columns>
        <columns>PostCode__c</columns>
        <columns>Area__c</columns>
        <columns>User__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Postcodes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Salman_Buksh</fullName>
        <columns>PostCode__c</columns>
        <columns>User__c</columns>
        <columns>Area__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User__c</field>
            <operation>equals</operation>
            <value>Salman Buksh</value>
        </filters>
        <label>Salman Buksh</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>PostCode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PostCodes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>